--- a/formShelter.html
+++ b/formShelter.html
@@ -24,8 +24,8 @@
             </a>
         </div>
         <nav class="nav-bar">
-            <a href="favouritePet.html">
-                <img src="assets/svg/heart.svg" class="heart" alt="">
+            <a href="adoptionRequestsShelter.html">
+                <img src="assets/svg/clipboard.svg" class="heart" alt="">
             </a>
             <img src="assets/svg/menu.svg" class="menu" alt="">
         </nav>
