--- a/homeShelter.html
+++ b/homeShelter.html
@@ -19,13 +19,13 @@
 
     <header>
         <div class="logo">
-            <a href="index.html">
+            <a href="homeShelter.html">
                 <img src="assets/svg/logo.svg" class="pawchontli-icon" alt="">
             </a>
         </div>
         <nav class="nav-bar">
-            <a href="favouritePet.html">
-                <img src="assets/svg/heart.svg" class="heart" alt="">
+            <a href="adoptionRequestsShelter.html">
+                <img src="assets/svg/clipboard.svg" class="heart" alt="">
             </a>
             <img src="assets/svg/menu.svg" class="menu" alt="">
         </nav>
@@ -38,7 +38,7 @@
             </div>
             <div class="rectangle-background"></div>
         </div>
-        <div>
+        <div class="d-flex flex-wrap justify-content-center align-items-center">
             <div class="adoption-requests text-center d-flex justify-content-center">
                 <div class="card" style="width: 30rem;">
                     <a href="adoptionRequestsShelter.html">
@@ -51,29 +51,21 @@
             <div class="add-new-pet text-center d-flex justify-content-center pt-4">
                 <div class="card" style="width: 30rem;"">
                     <a href=" createPet.html">
-                    <img src="assets/svg/add.svg" alt="" style="height: 3em; width: 3em;">
+                    <img src="assets/svg/add.svg" alt="" style="height: 8em; width: 8em;">
                     <h3 class="josefinsans-medium-chetwode-blue-20px">Añadir mascota</h3>
-                    </a>
-                </div>
-            </div>
-
-            <div class="add-new-pet text-center d-flex justify-content-center pt-4">
-                <div class="card" style="width: 30rem;"">
-                    <a href=" adoptionForm.html">
-                    <h3 class="josefinsans-medium-chetwode-blue-20px p-3">Formulario de adopción</h3>
                     </a>
                 </div>
             </div>
         </div>
         <div class="search-in-adoption-pet">
             <h1 class="d-flex flex-wrap justify-content-center josefinsans-semi-bold-chetwode-blue-24px">
-                Mascotas en adopción cerca de ti
+                Mascotas en adopción
             </h1>
             <div class="filter-options">
                 <div class="d-flex flex-row align-items-center justify-content-center pb-4">
                     <a href="">
                         <button class="button-filter josefinsans-normal-chetwode-blue-16px border-2px-chetwode-blue">
-                            <img src="assets/svg/filter.svg" alt="">
+                            <img src="assets/svg/filter.svg" alt="" style="width: 3em;" class="filter-img">
                             Filtrar
                         </button>
                     </a>
@@ -100,9 +92,13 @@
                                 d="M12,21.35L10.55,20.03C5.4,15.36 2,12.27 2,8.5C2,5.41 4.42,3 7.5,3C9.24,3 10.91,3.81 12,5.08C13.09,3.81 14.76,3 16.5,3C19.58,3 22,5.41 22,8.5C22,12.27 18.6,15.36 13.45,20.03L12,21.35Z">
                             </path>
                         </svg>
-                        <img class="card-img-top" src="assets/img/perro_2.jpg" alt="Pet">
+                        <a href="">
+                            <img class="card-img-top" src="assets/img/perro_2.jpg" alt="Pet">
+                        </a>
                         <div class="card-body">
-                            <p class="card-text josefinsans-semi-bold-chetwode-blue-16px">Apolo</p>
+                            <a href="">
+                                <p class="card-text josefinsans-semi-bold-chetwode-blue-16px">Apolo</p>
+                            </a>
                         </div>
                     </div>
 
@@ -112,9 +108,13 @@
                                 d="M12,21.35L10.55,20.03C5.4,15.36 2,12.27 2,8.5C2,5.41 4.42,3 7.5,3C9.24,3 10.91,3.81 12,5.08C13.09,3.81 14.76,3 16.5,3C19.58,3 22,5.41 22,8.5C22,12.27 18.6,15.36 13.45,20.03L12,21.35Z">
                             </path>
                         </svg>
-                        <img class="card-img-top" src="assets/img/perro_6.jpg" alt="Pet">
+                        <a href="">
+                            <img class="card-img-top" src="assets/img/perro_6.jpg" alt="Pet">
+                        </a>
                         <div class="card-body">
-                            <p class="card-text josefinsans-semi-bold-chetwode-blue-16px">Capitán</p>
+                            <a href="">
+                                <p class="card-text josefinsans-semi-bold-chetwode-blue-16px">Capitán</p>
+                            </a>
                         </div>
                     </div>
 
@@ -124,9 +124,13 @@
                                 d="M12,21.35L10.55,20.03C5.4,15.36 2,12.27 2,8.5C2,5.41 4.42,3 7.5,3C9.24,3 10.91,3.81 12,5.08C13.09,3.81 14.76,3 16.5,3C19.58,3 22,5.41 22,8.5C22,12.27 18.6,15.36 13.45,20.03L12,21.35Z">
                             </path>
                         </svg>
-                        <img class="card-img-top" src="assets/img/gato_1.jpg" alt="Pet">
+                        <a href="">
+                            <img class="card-img-top" src="assets/img/gato_1.jpg" alt="Pet">
+                        </a>
                         <div class="card-body">
-                            <p class="card-text josefinsans-semi-bold-chetwode-blue-16px">Jacinta</p>
+                            <a href="">
+                                <p class="card-text josefinsans-semi-bold-chetwode-blue-16px">Jacinta</p>
+                            </a>
                         </div>
                     </div>
 
@@ -136,9 +140,13 @@
                                 d="M12,21.35L10.55,20.03C5.4,15.36 2,12.27 2,8.5C2,5.41 4.42,3 7.5,3C9.24,3 10.91,3.81 12,5.08C13.09,3.81 14.76,3 16.5,3C19.58,3 22,5.41 22,8.5C22,12.27 18.6,15.36 13.45,20.03L12,21.35Z">
                             </path>
                         </svg>
-                        <img class="card-img-top" src="assets/img/gato_5.jpg" alt="Pet">
+                        <a href="">
+                            <img class="card-img-top" src="assets/img/gato_5.jpg" alt="Pet">
+                        </a>
                         <div class="card-body">
-                            <p class="card-text josefinsans-semi-bold-chetwode-blue-16px">Lucy</p>
+                            <a href="">
+                                <p class="card-text josefinsans-semi-bold-chetwode-blue-16px">Lucy</p>
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -155,9 +163,13 @@
                             d="M12,21.35L10.55,20.03C5.4,15.36 2,12.27 2,8.5C2,5.41 4.42,3 7.5,3C9.24,3 10.91,3.81 12,5.08C13.09,3.81 14.76,3 16.5,3C19.58,3 22,5.41 22,8.5C22,12.27 18.6,15.36 13.45,20.03L12,21.35Z">
                         </path>
                     </svg>
-                    <img class="card-img-top" src="assets/img/perro_2.jpg" alt="Pet">
+                    <a href="">
+                        <img class="card-img-top" src="assets/img/perro_4.jpg" alt="Pet">
+                    </a>
                     <div class="card-body">
-                        <p class="card-text josefinsans-semi-bold-chetwode-blue-16px">Apolo</p>
+                        <a href="">
+                            <p class="card-text josefinsans-semi-bold-chetwode-blue-16px">Terror</p>
+                        </a>
                     </div>
                 </div>
 
@@ -167,9 +179,13 @@
                             d="M12,21.35L10.55,20.03C5.4,15.36 2,12.27 2,8.5C2,5.41 4.42,3 7.5,3C9.24,3 10.91,3.81 12,5.08C13.09,3.81 14.76,3 16.5,3C19.58,3 22,5.41 22,8.5C22,12.27 18.6,15.36 13.45,20.03L12,21.35Z">
                         </path>
                     </svg>
-                    <img class="card-img-top" src="assets/img/perro_6.jpg" alt="Pet">
+                    <a href="">
+                        <img class="card-img-top" src="assets/img/perro_8.jpg" alt="Pet">
+                    </a>
                     <div class="card-body">
-                        <p class="card-text josefinsans-semi-bold-chetwode-blue-16px">Capitán</p>
+                        <a href="">
+                            <p class="card-text josefinsans-semi-bold-chetwode-blue-16px">Mobid</p>
+                        </a>
                     </div>
                 </div>
 
@@ -179,9 +195,13 @@
                             d="M12,21.35L10.55,20.03C5.4,15.36 2,12.27 2,8.5C2,5.41 4.42,3 7.5,3C9.24,3 10.91,3.81 12,5.08C13.09,3.81 14.76,3 16.5,3C19.58,3 22,5.41 22,8.5C22,12.27 18.6,15.36 13.45,20.03L12,21.35Z">
                         </path>
                     </svg>
-                    <img class="card-img-top" src="assets/img/gato_1.jpg" alt="Pet">
+                    <a href="">
+                        <img class="card-img-top" src="assets/img/gato_3.jpg" alt="Pet">
+                    </a>
                     <div class="card-body">
-                        <p class="card-text josefinsans-semi-bold-chetwode-blue-16px">Jacinta</p>
+                        <a href="">
+                            <p class="card-text josefinsans-semi-bold-chetwode-blue-16px">Oreo</p>
+                        </a>
                     </div>
                 </div>
 
@@ -191,9 +211,13 @@
                             d="M12,21.35L10.55,20.03C5.4,15.36 2,12.27 2,8.5C2,5.41 4.42,3 7.5,3C9.24,3 10.91,3.81 12,5.08C13.09,3.81 14.76,3 16.5,3C19.58,3 22,5.41 22,8.5C22,12.27 18.6,15.36 13.45,20.03L12,21.35Z">
                         </path>
                     </svg>
-                    <img class="card-img-top" src="assets/img/gato_5.jpg" alt="Pet">
+                    <a href="">
+                        <img class="card-img-top" src="assets/img/gato_8.jpg" alt="Pet">
+                    </a>
                     <div class="card-body">
-                        <p class="card-text josefinsans-semi-bold-chetwode-blue-16px">Lucy</p>
+                        <a href="">
+                            <p class="card-text josefinsans-semi-bold-chetwode-blue-16px">Pepita</p>
+                        </a>
                     </div>
                 </div>
             </div>
