--- a/searchPet.html
+++ b/searchPet.html
@@ -42,7 +42,7 @@
             <div class="d-flex flex-row align-items-center justify-content-center pb-4">
                 <a href="">
                     <button class="button-filter josefinsans-normal-chetwode-blue-16px border-2px-chetwode-blue">
-                        <img src="assets/svg/filter.svg" alt="">
+                        <img src="assets/svg/filter.svg" alt="" style="width: 3em;">
                         Filtrar
                     </button>
                 </a>
@@ -223,16 +223,6 @@
                     <p class="card-text josefinsans-semi-bold-chetwode-blue-16px">Lucy</p>
                 </div>
             </div>
-        </div>
-        <div class="pagination d-flex justify-content-center pt-4">
-            <a href="#">&laquo;</a>
-            <a href="#" class="active">1</a>
-            <a href="#">2</a>
-            <a href="#">3</a>
-            <a href="#">4</a>
-            <a href="#">5</a>
-            <a href="#">6</a>
-            <a href="#">&raquo;</a>
         </div>
     </main>
 
