--- a/signUpShelter.html
+++ b/signUpShelter.html
@@ -19,7 +19,7 @@
 
     <header class="log-in d-flex align-items-center justify-content-center">
         <h1 class="josefinsans-normal-black-30px">Registrar mi </br> refugio</h1>
-        <a href="signUpUser.html" class="registrarme josefinsans-normal-chetwode-blue-16px">Ingresar</a>
+        <a href="logInShelter.html" class="registrarme josefinsans-normal-chetwode-blue-16px">Ingresar</a>
     </header>
 
     <main>
@@ -43,7 +43,7 @@
                         placeholder="Confirmar contraseña">
                 </li>
                 <br>
-                <input type="submit" value="Ingresar" class="button-p josefinsans-normal-white-20px button-primary">
+                <input type="submit" value="Registrar" class="button-p josefinsans-normal-white-20px button-primary">
             </ul>
         </form>
     </main>
