--- a/signUpUser.html
+++ b/signUpUser.html
@@ -43,7 +43,7 @@
                         placeholder="Confirmar contraseña">
                 </li>
                 <br>
-                <input type="submit" value="Ingresar" class="button-p josefinsans-normal-white-20px button-primary">
+                <input type="submit" value="Registrar" class="button-p josefinsans-normal-white-20px button-primary">
             </ul>
         </form>
     </main>
