--- a/detailPet.html
+++ b/detailPet.html
@@ -12,7 +12,13 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Quicksand:wght@300;400;500;600;700&display=swap"
         rel="stylesheet">
-    <!-- <title>Pawchontli 🐶🐱 || Detalle mascota </title> -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.css"
+        integrity="sha512-OTcub78R3msOCtY3Tc6FzeDJ8N9qvQn1Ph49ou13xgA9VsH9+LRxoFU6EqLhW4+PKRfU+/HReXmSZXHEkpYoOA=="
+        crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"
+        integrity="sha512-tS3S5qG0BlhnQROyJXvNjeEM4UpMXHrQfTGmbQ1gKmelCxlSEBUaxhRBj/EFTzpbP4RVSrpEikbmdJobCvhE3g=="
+        crossorigin="anonymous" />
+    <title>Pawchontli 🐶🐱 || Detalle mascota </title>
 </head>
 
 <body>
@@ -31,14 +37,144 @@
         </nav>
     </header>
 
-    
+    <main>
+        <div class="detail-pet">
+            <div class="image-pet d-flex justify-content-center align-items-center flex-column pt-1">
+                <img src="assets/img/pexels-rk-jajoria-1189673.jpg" alt="" class="container-fluid">
+                <div class=""></div>
+            </div>
+            <div class="pet-text rectangle-background">
+                <div class="info-pet">
+                    <h2 class="px-5 py-4">Gnocchi</h2>
+                    <div class="d-flex flex-column">
+                        <div class="main-info d-flex flex-row justify-content-around">
+                            <div>
+                                <p>EDAD</p>
+                                <p>8 meses</p>
+                            </div>
+                            <div>
+                                <p>TALLA</p>
+                                <p>Mediana</p>
+                            </div>
+                            <div>
+                                <p>SEXO</p>
+                                <p>Macho</p>
+                            </div>
+                        </div>
+                        <div class="secondary-info d-flex flex-column justify-content-around">
+                            <div class="px-lg-5">
+                                <p>UBICACIÓN</p>
+                                <p>Coyoacán</p>
+                            </div>
+                            <div class="px-lg-5">
+                                <p>DETALLES</p>
+                                <p>Gnocchi es muy juguetón, convive con otros perros. Está ciego de un ojo. Esterilizado y con
+                                    vacunas al día.</p>
+                            </div>
+                            <div class="px-lg-5">
+                                <p>HISTORIA</p>
+                                <p>Gnocchi fue rescatado de la calle.</p>
+                            </div>
+                            <div class="px-lg-5">
+                                <p>NECESIDADES ESPECIALES</p>
+                                <p>Espacios amplios.</p>
+                            </div>
+                        </div>
+                        <div class="user-actions d-inline-flex flex-row justify-content-evenly">
+                            <form action="https://www.paypal.com/donate" method="post" target="_top"
+                                class="button-donation">
+                                <input type="hidden" name="business" value="princessna11@hotmail.com" />
+                                <input type="hidden" name="item_name" value="Pawchontli" />
+                                <input type="hidden" name="currency_code" value="MXN" />
+                                <input type="image" src="assets/svg/button-sponsor.svg" border="0" name="submit style"
+                                    title="PayPal - The safer, easier way to pay online!"
+                                    alt="Donate with PayPal button" style="width: 10em;" />
+                                <img alt="" border="0" src="https://www.paypal.com/en_MX/i/scr/pixel.gif" width="1"
+                                    height="1" />
+                            </form>
+                            <button class="button-main">Adoptar</button>
+                        </div>
+                        <div class="info-shelter d-flex flex-column justify-content-around">
+                            <a href="">
+                                <p>
+                                    REFUGIO
+                                </p>
+                                <img src="" alt="">
+                                <p>Refugio San Gregorio</p>
+                                <p>Felipe Carrillo puerto #400, Alberto Zamora, Coyoacán, 04000, CDMX.</p>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+    </main>
+
+    <footer text-center>
+        <div class="top-footer">
+            <img onclick="topFunction()" id="myBtn" title="Go to top" src="assets/svg/arrow.svg" alt="" class="arrow">
+        </div>
+        <div class="container text-center">
+            <img src="assets/svg/logowhite.svg" alt="" class="logo-white">
+        </div>
+        <div class="block-footer d-flex flex-column pb-4 align-content-start">
+            <ul>
+                <li>
+                    <a href="">Acerca</a>
+                </li>
+                <li>
+                    <a href="">Refugios</a>
+                </li>
+                <li>
+                    <a href="">Condiciones de uso</a>
+                </li>
+                <li>
+                    <a href="">Política de privacidad</a>
+                </li>
+            </ul>
+            <ul>
+                <li>
+                    <a href="">Partners</a>
+                </li>
+                <li>
+                    <a href="">Soporte</a>
+                </li>
+                <li>
+                    <a href="">Mapa del sitio</a>
+                </li>
+            </ul>
+        </div>
+
+        <div class="icons-footer d-flex justify-content-evenly">
+            <a href="" role="button">
+                <img src="/assets/svg/facebook.svg" alt="" style="height: 2.5em; width: 2.5em;">
+            </a>
+            <a href="" role="button">
+                <img src="/assets/svg/twitter.svg" alt="" style="height: 2.5em; width: 2.5em;">
+            </a>
+            <a href="" role="button">
+                <img src="/assets/svg/instagram.svg" alt="" style="height: 2.5em; width: 2.5em;">
+            </a>
+            <a href="">
+                <img src="/assets/svg/git.svg" alt="" style="height: 3em; width: 3em;">
+            </a>
+        </div>
+        <div class="text-center pb-4">
+            <p class="quicksand-normal-white-10px">© 2021 Todos los derechos reservados.</p>
+        </div>
+    </footer>
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"
         integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"
+        integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw=="
+        crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous">
     </script>
     <script src="js/main.js"></script>
+
+
+
 </body>
 
 </html>
