Updated footer css

--- a/detailPet.html
+++ b/detailPet.html
@@ -45,38 +45,39 @@
             </div>
             <div class="pet-text rectangle-background">
                 <div class="info-pet">
-                    <h2 class="px-5 py-4">Gnocchi</h2>
+                    <h2 class="px-5 josefinsans-normal-black-30px">Gnocchi</h2>
                     <div class="d-flex flex-column">
-                        <div class="main-info d-flex flex-row justify-content-around">
+                        <div class="main-info d-flex flex-wrap justify-content-around">
                             <div>
-                                <p>EDAD</p>
+                                <p class="josefinsans-chetwode-blue-18px">EDAD</p>
                                 <p>8 meses</p>
                             </div>
                             <div>
-                                <p>TALLA</p>
+                                <p class="josefinsans-chetwode-blue-18px">TALLA</p>
                                 <p>Mediana</p>
                             </div>
                             <div>
-                                <p>SEXO</p>
+                                <p class="josefinsans-chetwode-blue-18px">SEXO</p>
                                 <p>Macho</p>
                             </div>
                         </div>
                         <div class="secondary-info d-flex flex-column justify-content-around">
-                            <div class="px-lg-5">
-                                <p>UBICACIÓN</p>
+                            <div>
+                                <p class="josefinsans-chetwode-blue-18px">UBICACIÓN</p>
                                 <p>Coyoacán</p>
                             </div>
-                            <div class="px-lg-5">
-                                <p>DETALLES</p>
-                                <p>Gnocchi es muy juguetón, convive con otros perros. Está ciego de un ojo. Esterilizado y con
+                            <div>
+                                <p class="josefinsans-chetwode-blue-18px">DETALLES</p>
+                                <p>Gnocchi es muy juguetón, convive con otros perros. Está ciego de un ojo. Esterilizado
+                                    y con
                                     vacunas al día.</p>
                             </div>
-                            <div class="px-lg-5">
-                                <p>HISTORIA</p>
+                            <div>
+                                <p class="josefinsans-chetwode-blue-18px">HISTORIA</p>
                                 <p>Gnocchi fue rescatado de la calle.</p>
                             </div>
-                            <div class="px-lg-5">
-                                <p>NECESIDADES ESPECIALES</p>
+                            <div>
+                                <p class="josefinsans-chetwode-blue-18px">NECESIDADES ESPECIALES</p>
                                 <p>Espacios amplios.</p>
                             </div>
                         </div>
@@ -92,21 +93,26 @@
                                 <img alt="" border="0" src="https://www.paypal.com/en_MX/i/scr/pixel.gif" width="1"
                                     height="1" />
                             </form>
-                            <button class="button-main">Adoptar</button>
+                            <a href="adoptionForm.html">
+                                <button class="button-main">Adoptar</button>
+                            </a>
                         </div>
-                        <div class="info-shelter d-flex flex-column justify-content-around">
-                            <a href="">
-                                <p>
-                                    REFUGIO
-                                </p>
-                                <img src="" alt="">
-                                <p>Refugio San Gregorio</p>
-                                <p>Felipe Carrillo puerto #400, Alberto Zamora, Coyoacán, 04000, CDMX.</p>
+                        <div class="info-shelter py-5 d-flex flex-column">
+                            <p class="px-4 josefinsans-chetwode-blue-18px">
+                                REFUGIO
+                            </p>
+                            <a href="profileShelter.html" class="d-inline-flex container flex-row">
+                                <img src="assets/img/scsh 2021-04-19 a la(s) 14.00.37.jpg" alt="" style="width: 6em; height: 6em;">
+                                <div class="col-10 px-4">
+                                    <p>Refugio San Gregorio</p>
+                                    <p>Felipe Carrillo puerto #400, Alberto Zamora, Coyoacán, 04000, CDMX.</p>
+                                </div>
                             </a>
                         </div>
                     </div>
                 </div>
             </div>
+        </div>
     </main>
 
     <footer text-center>
@@ -116,7 +122,7 @@
         <div class="container text-center">
             <img src="assets/svg/logowhite.svg" alt="" class="logo-white">
         </div>
-        <div class="block-footer d-flex flex-column pb-4 align-content-start">
+        <div class="block-footer d-flex flex-wrap pb-4 justify-content-around">
             <ul>
                 <li>
                     <a href="">Acerca</a>
