--- a/formUser.html
+++ b/formUser.html
@@ -175,7 +175,7 @@
             </ul>
         </div>
 
-        <div class="icons-footer d-flex justify-content-evenly">
+        <div class="block-footer d-flex flex-wrap pb-4 justify-content-around">
             <a href="" role="button">
                 <img src="/assets/svg/facebook.svg" alt="" style="height: 2.5em; width: 2.5em;">
             </a>
