--- a/updateShelter.html
+++ b/updateShelter.html
@@ -169,7 +169,7 @@
         <div class="container text-center">
             <img src="assets/svg/logowhite.svg" alt="" class="logo-white">
         </div>
-        <div class="block-footer d-flex flex-column pb-4 align-content-start">
+        <div class="block-footer d-flex flex-wrap pb-4 justify-content-around">
             <ul>
                 <li>
                     <a href="">Acerca</a>
