--- a/createPet.html
+++ b/createPet.html
@@ -115,7 +115,7 @@
                         <div class="drag-text">
                             <br>
                             <img src="assets/svg/add.svg" alt="" style="height: 3em; width: 3em;">
-                            <h3 class="josefinsans-medium-chetwode-blue-14px">Añadir foto de perfil</h3>
+                            <h3 class="josefinsans-medium-chetwode-blue-14px">Añadir foto de la mascota</h3>
                         </div>
                     </div>
                     <div class="file-upload-content">
@@ -126,7 +126,7 @@
                         </div>
                     </div>
                 </div>
-                <input type="submit" value="Crear" class="button-p josefinsans-normal-white-20px button-primary">
+                <input type="submit" value="Agregar mascota" class="button-p josefinsans-normal-white-20px ">
             </ul>
         </form>
     </main>
