--- a/favouritePet.html
+++ b/favouritePet.html
@@ -87,7 +87,9 @@
                             title="PayPal - The safer, easier way to pay online!" alt="Donate with PayPal button" style="width: 10em;"/>
                         <img alt="" border="0" src="https://www.paypal.com/en_MX/i/scr/pixel.gif" width="1" height="1" />
                     </form>
-                    <button class="button-main">Adoptar</button>
+                    <a href="adoptionForm.html">
+                        <button class="button-main">Adoptar</button>
+                    </a>
                 </div>
             </div>
 
@@ -116,7 +118,9 @@
                             title="PayPal - The safer, easier way to pay online!" alt="Donate with PayPal button" style="width: 10em;"/>
                         <img alt="" border="0" src="https://www.paypal.com/en_MX/i/scr/pixel.gif" width="1" height="1" />
                     </form>
-                    <button class="button-main">Adoptar</button>
+                    <a href="adoptionForm.html">
+                        <button class="button-main">Adoptar</button>
+                    </a>
                 </div>
             </div>
 
@@ -145,9 +149,10 @@
                             title="PayPal - The safer, easier way to pay online!" alt="Donate with PayPal button" style="width: 10em;"/>
                         <img alt="" border="0" src="https://www.paypal.com/en_MX/i/scr/pixel.gif" width="1" height="1" />
                     </form>
-                    <button class="button-main">Adoptar</button>
+                    <a href="adoptionForm.html">
+                        <button class="button-main">Adoptar</button>
+                    </a>
                 </div>
-
             </div>
             <div class="d-flex flex-column px-lg-3 pt-2">
                 <div class="card" style="width: 20rem;">
@@ -174,7 +179,69 @@
                             title="PayPal - The safer, easier way to pay online!" alt="Donate with PayPal button" style="width: 10em;"/>
                         <img alt="" border="0" src="https://www.paypal.com/en_MX/i/scr/pixel.gif" width="1" height="1" />
                     </form>
-                    <button class="button-main">Adoptar</button>
+                    <a href="adoptionForm.html">
+                        <button class="button-main">Adoptar</button>
+                    </a>
+                </div>
+            </div>
+            <div class="d-flex flex-column px-lg-3 pt-2">
+                <div class="card" style="width: 20rem;">
+                    <svg class="ico" viewBox="0 0 24 24" style="width: 3em; height: 3em">
+                        <path
+                            d="M12,21.35L10.55,20.03C5.4,15.36 2,12.27 2,8.5C2,5.41 4.42,3 7.5,3C9.24,3 10.91,3.81 12,5.08C13.09,3.81 14.76,3 16.5,3C19.58,3 22,5.41 22,8.5C22,12.27 18.6,15.36 13.45,20.03L12,21.35Z">
+                        </path>
+                    </svg>
+                    <a href="">
+                        <img class="card-img-top" src="assets/img/gato_7.jpg" alt="Pet">
+                    </a>
+                    <div class="card-body">
+                        <a href="">
+                            <p class="card-text josefinsans-semi-bold-chetwode-blue-16px">Tobías</p>
+                        </a>
+                    </div>
+                </div>
+                <div class="d-inline-flex flex-row justify-content-evenly">
+                    <form action="https://www.paypal.com/donate" method="post" target="_top" class="button-donation">
+                        <input type="hidden" name="business" value="princessna11@hotmail.com" />
+                        <input type="hidden" name="item_name" value="Pawchontli" />
+                        <input type="hidden" name="currency_code" value="MXN" />
+                        <input type="image" src="assets/svg/button-sponsor.svg" border="0" name="submit style"
+                            title="PayPal - The safer, easier way to pay online!" alt="Donate with PayPal button" style="width: 10em;"/>
+                        <img alt="" border="0" src="https://www.paypal.com/en_MX/i/scr/pixel.gif" width="1" height="1" />
+                    </form>
+                    <a href="adoptionForm.html">
+                        <button class="button-main">Adoptar</button>
+                    </a>
+                </div>
+            </div>
+            <div class="d-flex flex-column px-lg-3 pt-2">
+                <div class="card" style="width: 20rem;">
+                    <svg class="ico" viewBox="0 0 24 24" style="width: 3em; height: 3em">
+                        <path
+                            d="M12,21.35L10.55,20.03C5.4,15.36 2,12.27 2,8.5C2,5.41 4.42,3 7.5,3C9.24,3 10.91,3.81 12,5.08C13.09,3.81 14.76,3 16.5,3C19.58,3 22,5.41 22,8.5C22,12.27 18.6,15.36 13.45,20.03L12,21.35Z">
+                        </path>
+                    </svg>
+                    <a href="">
+                        <img class="card-img-top" src="assets/img/gato_9.jpg" alt="Pet">
+                    </a>
+                    <div class="card-body">
+                        <a href="">
+                            <p class="card-text josefinsans-semi-bold-chetwode-blue-16px">Simona</p>
+                        </a>
+                    </div>
+                </div>
+                <div class="d-inline-flex flex-row justify-content-evenly">
+                    <form action="https://www.paypal.com/donate" method="post" target="_top" class="button-donation">
+                        <input type="hidden" name="business" value="princessna11@hotmail.com" />
+                        <input type="hidden" name="item_name" value="Pawchontli" />
+                        <input type="hidden" name="currency_code" value="MXN" />
+                        <input type="image" src="assets/svg/button-sponsor.svg" border="0" name="submit style"
+                            title="PayPal - The safer, easier way to pay online!" alt="Donate with PayPal button" style="width: 10em;"/>
+                        <img alt="" border="0" src="https://www.paypal.com/en_MX/i/scr/pixel.gif" width="1" height="1" />
+                    </form>
+                    <a href="adoptionForm.html">
+                        <button class="button-main">Adoptar</button>
+                    </a>
                 </div>
             </div>
         </div>
@@ -201,7 +268,9 @@
                         </div>
                     </div>
                     <div class="d-inline-flex flex-row justify-content-evenly">
-                        <button class="button-main">Adoptar</button>
+                        <a href="adoptionForm.html">
+                            <button class="button-main">Adoptar</button>
+                        </a>
                     </div>
                 </div>
     
@@ -222,7 +291,9 @@
                         </div>
                     </div>
                     <div class="d-inline-flex flex-row justify-content-evenly">
-                        <button class="button-main">Adoptar</button>
+                        <a href="adoptionForm.html">
+                            <button class="button-main">Adoptar</button>
+                        </a>
                     </div>
                 </div>
             </div>
