--- a/searchPet.html
+++ b/searchPet.html
@@ -68,9 +68,13 @@
                         d="M12,21.35L10.55,20.03C5.4,15.36 2,12.27 2,8.5C2,5.41 4.42,3 7.5,3C9.24,3 10.91,3.81 12,5.08C13.09,3.81 14.76,3 16.5,3C19.58,3 22,5.41 22,8.5C22,12.27 18.6,15.36 13.45,20.03L12,21.35Z">
                     </path>
                 </svg>
-                <img class="card-img-top" src="assets/img/perro_2.jpg" alt="Pet">
+                <a href="detailPet.html">
+                    <img class="card-img-top" src="assets/img/perro_2.jpg" alt="Pet">
+                </a>
                 <div class="card-body">
-                    <p class="card-text josefinsans-semi-bold-chetwode-blue-16px">Apolo</p>
+                    <a href="">
+                        <p class="card-text josefinsans-semi-bold-chetwode-blue-16px">Apolo</p>
+                    </a>
                 </div>
             </div>
 
@@ -80,9 +84,13 @@
                         d="M12,21.35L10.55,20.03C5.4,15.36 2,12.27 2,8.5C2,5.41 4.42,3 7.5,3C9.24,3 10.91,3.81 12,5.08C13.09,3.81 14.76,3 16.5,3C19.58,3 22,5.41 22,8.5C22,12.27 18.6,15.36 13.45,20.03L12,21.35Z">
                     </path>
                 </svg>
-                <img class="card-img-top" src="assets/img/perro_6.jpg" alt="Pet">
+                <a href="">
+                    <img class="card-img-top" src="assets/img/perro_6.jpg" alt="Pet">
+                </a>
                 <div class="card-body">
-                    <p class="card-text josefinsans-semi-bold-chetwode-blue-16px">Capitán</p>
+                    <a href="">
+                        <p class="card-text josefinsans-semi-bold-chetwode-blue-16px">Capitán</p>
+                    </a>
                 </div>
             </div>
 
@@ -92,9 +100,13 @@
                         d="M12,21.35L10.55,20.03C5.4,15.36 2,12.27 2,8.5C2,5.41 4.42,3 7.5,3C9.24,3 10.91,3.81 12,5.08C13.09,3.81 14.76,3 16.5,3C19.58,3 22,5.41 22,8.5C22,12.27 18.6,15.36 13.45,20.03L12,21.35Z">
                     </path>
                 </svg>
-                <img class="card-img-top" src="assets/img/gato_1.jpg" alt="Pet">
+                <a href="">
+                    <img class="card-img-top" src="assets/img/gato_1.jpg" alt="Pet">
+                </a>
                 <div class="card-body">
-                    <p class="card-text josefinsans-semi-bold-chetwode-blue-16px">Jacinta</p>
+                    <a href="">
+                        <p class="card-text josefinsans-semi-bold-chetwode-blue-16px">Jacinta</p>
+                    </a>
                 </div>
             </div>
 
@@ -104,9 +116,13 @@
                         d="M12,21.35L10.55,20.03C5.4,15.36 2,12.27 2,8.5C2,5.41 4.42,3 7.5,3C9.24,3 10.91,3.81 12,5.08C13.09,3.81 14.76,3 16.5,3C19.58,3 22,5.41 22,8.5C22,12.27 18.6,15.36 13.45,20.03L12,21.35Z">
                     </path>
                 </svg>
-                <img class="card-img-top" src="assets/img/gato_5.jpg" alt="Pet">
+                <a href="">
+                    <img class="card-img-top" src="assets/img/gato_5.jpg" alt="Pet">
+                </a>
                 <div class="card-body">
-                    <p class="card-text josefinsans-semi-bold-chetwode-blue-16px">Lucy</p>
+                    <a href="">
+                        <p class="card-text josefinsans-semi-bold-chetwode-blue-16px">Lucy</p>
+                    </a>
                 </div>
             </div>
         </div>
@@ -118,9 +134,13 @@
                         d="M12,21.35L10.55,20.03C5.4,15.36 2,12.27 2,8.5C2,5.41 4.42,3 7.5,3C9.24,3 10.91,3.81 12,5.08C13.09,3.81 14.76,3 16.5,3C19.58,3 22,5.41 22,8.5C22,12.27 18.6,15.36 13.45,20.03L12,21.35Z">
                     </path>
                 </svg>
-                <img class="card-img-top" src="assets/img/perro_2.jpg" alt="Pet">
+                <a href="">
+                    <img class="card-img-top" src="assets/img/perro_2.jpg" alt="Pet">
+                </a>
                 <div class="card-body">
-                    <p class="card-text josefinsans-semi-bold-chetwode-blue-16px">Apolo</p>
+                    <a href="">
+                        <p class="card-text josefinsans-semi-bold-chetwode-blue-16px">Apolo</p>
+                    </a>
                 </div>
             </div>
 
@@ -130,9 +150,16 @@
                         d="M12,21.35L10.55,20.03C5.4,15.36 2,12.27 2,8.5C2,5.41 4.42,3 7.5,3C9.24,3 10.91,3.81 12,5.08C13.09,3.81 14.76,3 16.5,3C19.58,3 22,5.41 22,8.5C22,12.27 18.6,15.36 13.45,20.03L12,21.35Z">
                     </path>
                 </svg>
-                <img class="card-img-top" src="assets/img/perro_6.jpg" alt="Pet">
+                <a href="">
+                    <a href="">
+                        <img class="card-img-top" src="assets/img/perro_6.jpg" alt="Pet">
+                    </a>
+                    <img class="card-img-top" src="assets/img/perro_6.jpg" alt="Pet">
+                </a>
                 <div class="card-body">
-                    <p class="card-text josefinsans-semi-bold-chetwode-blue-16px">Capitán</p>
+                    <a href="">
+                        <p class="card-text josefinsans-semi-bold-chetwode-blue-16px">Capitán</p>
+                    </a>
                 </div>
             </div>
 
@@ -154,9 +181,13 @@
                         d="M12,21.35L10.55,20.03C5.4,15.36 2,12.27 2,8.5C2,5.41 4.42,3 7.5,3C9.24,3 10.91,3.81 12,5.08C13.09,3.81 14.76,3 16.5,3C19.58,3 22,5.41 22,8.5C22,12.27 18.6,15.36 13.45,20.03L12,21.35Z">
                     </path>
                 </svg>
-                <img class="card-img-top" src="assets/img/gato_5.jpg" alt="Pet">
+                <a href="">
+                    <img class="card-img-top" src="assets/img/gato_5.jpg" alt="Pet">
+                </a>
                 <div class="card-body">
-                    <p class="card-text josefinsans-semi-bold-chetwode-blue-16px">Lucy</p>
+                    <a href="">
+                        <p class="card-text josefinsans-semi-bold-chetwode-blue-16px">Lucy</p>
+                    </a>
                 </div>
             </div>
         </div>
